--- a/Centerlessblog/templates/index.html
+++ b/Centerlessblog/templates/index.html
@@ -57,12 +57,12 @@
             <ul class="nav navbar-nav">
                 <!-- 如果用户已经登录，则显示用户名下拉框 -->
                 <li class="nav-item dropdown" v-if="is_login">
-                    <a class="nav-link dropdown-toggle" href="{% url 'users:logout'%}" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">[[username]]</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="display: block"
                          v-show="show_menu">
-                        <a class="dropdown-item" href="../static/write_blog.html">写文章</a>
-                        <a class="dropdown-item" href='../static/center.html'>个人信息</a>
+                        <a class="dropdown-item" href="{% static 'write_blog.html' %}">写文章</a>
+                        <a class="dropdown-item" href='{% static 'center.html' %}'>个人信息</a>
                         <a class="dropdown-item" href='{% url 'users:logout'%}'>退出登录</a>
                     </div>
                 </li>
@@ -255,7 +255,7 @@
 <!-- Footer -->
 <footer class="py-3 bg-dark" id="footer">
     <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright @ qiruihua</h5>
+        <h5 class="m-0 text-center text-white">Copyright @ Centerless</h5>
     </div>
 </footer>
 </div>
