--- a/Centerlessblog/templates/register.html
+++ b/Centerlessblog/templates/register.html
@@ -23,14 +23,14 @@
     <div class="container">
         <!-- 导航栏商标 -->
         <div>
-            <a class="navbar-brand" href="index.html">个人博客</a>
+            <a class="navbar-brand" href="{% url 'home:index' %}">个人博客</a>
         </div>
     </div>
     <!--登录/个人中心-->
     <div class="navbar-collapse">
         <ul class="nav navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">登录</a>
+                <a class="nav-link" href="{% url 'users:login' %}">登录</a>
             </li>
         </ul>
     </div>
@@ -89,8 +89,8 @@
                             <small class="form-text text-muted ml-1" v-show="sms_code_error" >[[sms_code_error_message]]</small>
                         </div>
                         </div>
-{#                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login" @click="on_submit">注册</button>#}
-                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login">注册</button>
+                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login" @click="on_submit">注册</button>
+{#                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login">注册</button>#}
                 </form>
             </div>
         </div>
