--- a/Centerlessblog/templates/center.html
+++ b/Centerlessblog/templates/center.html
@@ -54,18 +54,19 @@
             <div class="col-12">
                 <br>
                 <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
                     <!-- username -->
                 <div class="form-group col-md-4">
                     <label for="username">用户名</label>
                     <input type="text" class="form-control" id="username" name="username" value="{{ username }}" >
                 </div>
                 <!--<br><h5 class="col-md-4">暂无头像</h5><br>-->
-                <br> <div class="col-md-4">头像</div>
-                    {% if avatar %}
-                        <img src="{{ avatar }}" style="max-width: 20%;" class="col-md-4"><br>
-                    {% else %}
-                        <img src="{% static 'img/mei.png' %}" style="max-width: 20%;" class="col-md-4"><br>
-                    {% endif %}
+                {% if avatar %}
+                    <br> <div class="col-md-4">头像</div>
+                    <img src="/media/{{ avatar }}" style="max-width: 20%; border-radius: 15%;" class="col-md-4"><br>
+                {% else %}
+                    <img src="{% static 'img/mei.png' %}" style="max-width: 20%;" class="col-md-4"><br>
+                {% endif %}
 
 
                     <!-- avatar -->
