新增博客提交功能模块

--- a/Centerlessblog/templates/center.html
+++ b/Centerlessblog/templates/center.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
 </head>
 
-<body>-+
+<body>
 <div id="app">
 
 <!-- 定义导航栏 -->
