--- a/Centerlessblog/static/bootstrap/css/bootstrap.css
+++ b/Centerlessblog/static/bootstrap/css/bootstrap.css
@@ -7536,6 +7536,11 @@ button.bg-dark:focus {
   margin-top: 1.5rem !important;
 }
 
+.mt-4-4,
+.my-4-4 {
+  margin-top: 1.5rem !important;
+}
+
 .mr-4,
 .mx-4 {
   margin-right: 1.5rem !important;
