--- a/Centerlessblog/templates/login.html
+++ b/Centerlessblog/templates/login.html
@@ -14,63 +14,87 @@
     <!-- 引入vuejs -->
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0; /* Add margin: 0 to remove default body margin */
+        }
+
+        body { /* Add the background image CSS to the body instead of #app */
+            background-image: url('/static/img/tuijian.png');
+            background-size: cover;
+            background-position: center center;
+        }
+
+        #app {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        #content {
+            flex: 1;
+        }
+    </style>
 </head>
 
 <body>
-<div id="app">
-
-<!-- 定义导航栏 -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <!-- 导航栏商标 -->
-    <div>
-        <a class="navbar-brand" href="{% url 'home:index' %}">
-            <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="50" height="50"
-                 style="border-radius: 50%;">
-            北木楠博客
-        </a>
-    </div>
-    <div class="navbar-collapse">
-    </div>
-</nav>
-<!--content-->
-<div class="container" style="height: 600px;margin-top: 20px">
-    <div class="row" >
-        <div class="col-12">
-            <div class="col-6">
-                <form class="login" id="login_form" method="POST">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="id_login">账号: </label>
-                        <input type="text" name="mobile" placeholder="请输入手机号" autofocus="autofocus" required id="id_login" class="form-control" v-model="mobile" @blur="check_mobile"/>
-                        <small class="form-text text-muted ml-1">还没有账号？<a href="{% url 'users:register' %}" style="color: cornflowerblue; ">注册新账号</a>
-                        </small>
-                    </div>
-                    <div class="form-group mb-1">
-                        <label for="id_password">密码:</label>
-                        <input type="password" name="password" placeholder="请输入密码" required id="id_password" class="form-control" v-model="password" @blur="check_password"/>
-                        <small class="form-text text-muted ml-1"><a class="secondaryAction layui-text" href="{% url 'users:forget_password' %}">忘记密码?</a>
-                        </small>
-                    </div>
-                    <div class="custom-control custom-checkbox mb-2">
-                        <input type="checkbox" name="remember" id="id_remember" checked class="custom-control-input" v-model="remembered"/>
-                        <label for="id_remember" class="custom-control-label">保持登录</label>
-                    </div>
-                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login" @click="on_submit">登录</button>
-                </form>
+    <div id="app">
+        <!-- 定义导航栏 -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <!-- 导航栏商标 -->
+            <div>
+                <a class="navbar-brand" href="{% url 'home:index' %}">
+                    <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="50" height="50"
+                        style="border-radius: 50%;">
+                    北木楠博客
+                </a>
+            </div>
+            <div class="navbar-collapse">
+            </div>
+        </nav>
+        <!--content-->
+        <div id="content" class="container" style="margin-top: 20px">
+            <div class="row">
+                <div class="col-12 col-md-6 offset-md-3">
+                    <form class="login" id="login_form" method="POST">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="id_login">账号: </label>
+                            <input type="text" name="mobile" placeholder="请输入手机号" autofocus="autofocus" required
+                                id="id_login" class="form-control" v-model="mobile" @blur="check_mobile" />
+                            <small class="form-text text-muted ml-1">还没有账号？<a href="{% url 'users:register' %}"
+                                    style="color: #0259f6; ">注册新账号</a>
+                            </small>
+                        </div>
+                        <div class="form-group mb-1">
+                            <label for="id_password">密码:</label>
+                            <input type="password" name="password" placeholder="请输入密码" required id="id_password"
+                                class="form-control" v-model="password" @blur="check_password" />
+                            <small class="form-text text-muted ml-1"><a class="secondaryAction layui-text"
+                                    href="{% url 'users:forget_password' %}">忘记密码?</a>
+                            </small>
+                        </div>
+                        <div class="custom-control custom-checkbox mb-2">
+                            <input type="checkbox" name="remember" id="id_remember" checked class="custom-control-input"
+                                v-model="remembered" />
+                            <label for="id_remember" class="custom-control-label">保持登录</label>
+                        </div>
+                        <button class="primaryAction btn btn-primary" type="submit" id="submit_login"
+                            @click="on_submit">登录</button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
-    
-<!-- Footer -->
-<footer class="py-3 bg-dark" id="footer">
-    <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright @ Centerless</h5>
+        <!-- Footer -->
+        <footer class="py-3 bg-dark" id="footer">
+            <div class="container">
+                <h5 class="m-0 text-center text-white">Copyright @ Centerless</h5>
+            </div>
+        </footer>
     </div>
-</footer>
-
-</div>
 <!-- 引入js -->
 <script type="text/javascript" src="{% static 'js/host.js'%}"></script>
 <script type="text/javascript" src="{% static 'js/common.js'%}"></script>
