优化个人信息上传图片大小

--- a/Centerlessblog/templates/index.html
+++ b/Centerlessblog/templates/index.html
@@ -20,6 +20,15 @@
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
+    <style>
+        body {
+            height: 100%;
+            margin: 0; /* Add margin: 0 to remove default body margin */
+            background-image: url('/static/img/tuijian.png');
+            background-size: cover;
+            background-position: center center;
+        }
+    </style>
 </head>
 
 <body>
