--- a/Centerlessblog/templates/center.html
+++ b/Centerlessblog/templates/center.html
@@ -13,6 +13,36 @@
     <!-- 引入vuejs -->
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
+    <style>
+        body {
+            height: 100%;
+            margin: 0; /* Add margin: 0 to remove default body margin */
+            background-image: url('/static/img/tuijian.png');
+            background-size: cover;
+            background-position: center center;
+        }
+        #app {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        /* Style the footer */
+        footer {
+            position: absolute;
+            width: 100%;
+            height: 50px; /* Set the desired height for the footer */
+            background-color: #343a40; /* Use your desired color */
+            color: #fff; /* Use your desired text color */
+            bottom: 0;
+        }
+
+        footer .container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -76,7 +106,7 @@
                     <!-- avatar -->
                     <div class="form-group col-md-4">
                         <label for="avatar">上传头像</label>
-                        <input type="file" class="form-control-file" name="avatar" id="avatar">
+                        <input type="file" class="form-control-file" name="avatar" id="avatar"  accept="image/*" onchange="validateFile(this)">
                     </div>
 
                     <!-- phone -->
@@ -109,6 +139,31 @@
 <script type="text/javascript" src="{% static 'js/host.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/common.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/center.js' %}"></script>
+<script>
+    function validateFile(input) {
+        const file = input.files[0];
+        const maxSize = 2 * 1024 * 1024; // 2MB
+        const mimResolution = 800;
+        const maxResolution = 1024;
+
+        if (file.size > maxSize) {
+            alert("请上传小于2MB的文件");
+            input.value = "";
+            return false;
+        }
+
+        const img = new Image();
+        img.onload = function () {
+            if (img.width > mimResolution || img.height > maxResolution) {
+                alert("请上传不大于800x1024像素的图片");
+                input.value = "";
+                return false;
+            }
+        };
+
+        img.src = URL.createObjectURL(file);
+    }
+</script>
 </body>
 
 </html>
