--- a/Centerlessblog/templates/write_blog.html
+++ b/Centerlessblog/templates/write_blog.html
@@ -16,41 +16,73 @@
     <!-- 引入vuejs -->
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
+    <style>
+        body {
+            height: 100%;
+            margin: 0; /* Add margin: 0 to remove default body margin */
+            background-image: url('/static/img/tuijian.png');
+            background-size: cover;
+            background-position: center center;
+        }
+        #app {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        /* Style the footer */
+        footer {
+            position: absolute;
+            width: 100%;
+            height: 50px; /* Set the desired height for the footer */
+            background-color: #343a40; /* Use your desired color */
+            color: #fff; /* Use your desired text color */
+            bottom: 0;
+        }
+
+        footer .container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
 <div id="app">
-<!-- 定义导航栏 -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <!-- 导航栏商标 -->
-        <div>
-            <a class="navbar-brand" href="{% url 'home:index' %}">
-                <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="50" height="50"
-                     style="border-radius: 50%;">
-                北木楠博客
-            </a>
+    <!-- 定义导航栏 -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <!-- 导航栏商标 -->
+            <div>
+                <a class="navbar-brand" href="{% url 'home:index' %}">
+                    <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="50" height="50"
+                         style="border-radius: 50%;">
+                    北木楠博客
+                </a>
+            </div>
         </div>
-    </div>
-    <!--登录/个人中心-->
-    <div class="navbar-collapse">
-        <ul class="nav navbar-nav">
-            <!-- 如果用户已经登录，则显示用户名下拉框 -->
-            <li class="nav-item dropdown" v-if="is_login">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">[[username]]</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="display: block" v-show="show_menu">
-                    <a class="dropdown-item" href="{% url 'users:writeblog' %}">写文章</a>
-                    <a class="dropdown-item" href='{% url 'users:center' %}'>个人信息</a>
-                    <a class="dropdown-item" href='{% url 'users:logout' %}'>退出登录</a>
-                </div>
-            </li>
-            <!-- 如果用户未登录，则显示登录按钮 -->
-            <li class="nav-item" v-else>
-                <a class="nav-link" href="{% url 'users:login' %}">登录</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+        <!--登录/个人中心-->
+        <div class="navbar-collapse">
+            <ul class="nav navbar-nav">
+                <!-- 如果用户已经登录，则显示用户名下拉框 -->
+                <li class="nav-item dropdown" v-if="is_login">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">[[username]]</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="display: block"
+                         v-show="show_menu">
+                        <a class="dropdown-item" href="{% url 'users:writeblog' %}">写文章</a>
+                        <a class="dropdown-item" href='{% url 'users:center' %}'>个人信息</a>
+                        <a class="dropdown-item" href='{% url 'users:logout' %}'>退出登录</a>
+                    </div>
+                </li>
+                <!-- 如果用户未登录，则显示登录按钮 -->
+                <li class="nav-item" v-else>
+                    <a class="nav-link" href="{% url 'users:login' %}">登录</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 <!-- 写文章表单 -->
 <div class="container" style="margin-bottom: 20px">
@@ -63,7 +95,10 @@
                 <!-- 文章标题图 -->
                 <div class="form-group">
                     <label for="avatar">标题图</label>
-                    <input type="file" class="form-control-file" name="avatar" id="avatar" >
+                    <input type="file" class="form-control-file" name="avatar" id="avatar" onchange="displayImage()">
+                </div>
+                <div id="uploaded-image-container">
+                    <!-- 已上传图片将在这里显示 -->
                 </div>
 
                 <!-- 文章标题 -->
@@ -82,8 +117,8 @@
                             {% for category in categories %}
                                 <option value="{{ category.id }}">{{ category.sort_title }}</option>
                             {% endfor %}
-                    </select>
-                </div>
+                        </select>
+                    </div>
 
                 <!-- 文章标签 -->
                 <div class="form-group">
@@ -128,6 +163,27 @@
 <script type="text/javascript" src="{% static 'js/host.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/common.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/write_blog.js' %}"></script>
+<script>
+    function displayImage() {
+        var input = document.getElementById('avatar');
+        var container = document.getElementById('uploaded-image-container');
+
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                var image = document.createElement('img');
+                image.src = e.target.result;
+                image.style.width = '210px';
+                image.style.height = '150px';
+                container.innerHTML = '';
+                container.appendChild(image);
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+</script>
 </body>
 
 </html>
