修改默认展示头像

--- a/Centerlessblog/templates/center.html
+++ b/Centerlessblog/templates/center.html
@@ -99,7 +99,7 @@
                     <br> <div class="col-md-4">头像</div>
                     <img src="/media/{{ avatar }}" style="max-width: 20%; border-radius: 15%;" class="col-md-4"><br>
                 {% else %}
-                    <img src="{% static 'img/mei.png' %}" style="max-width: 20%;" class="col-md-4"><br>
+                    <img src="{% static 'img/tuijian.png' %}" style="max-width: 20%;" class="col-md-4"><br>
                 {% endif %}
 
 
