--- a/Centerlessblog/templates/register.html
+++ b/Centerlessblog/templates/register.html
@@ -93,7 +93,7 @@
                             <small class="form-text text-muted ml-1" v-show="sms_code_error" >[[sms_code_error_message]]</small>
                         </div>
                         </div>
-                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login" @click="on_submit">注册</button>
+                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login">注册</button>
 {#                    <button class="primaryAction btn btn-primary" type="submit" id="submit_login">注册</button>#}
                 </form>
             </div>
