--- a/Centerlessblog/templates/index.html
+++ b/Centerlessblog/templates/index.html
@@ -70,7 +70,7 @@
                 <!-- 如果用户已经登录，则显示用户名下拉框 -->
                 <li class="nav-item dropdown" v-if="is_login">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">[[username]]</a>
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">{{ user.username }}</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="display: block"
                          v-show="show_menu">
                         <a class="dropdown-item" href="{% url 'users:writeblog' %}">写文章</a>
@@ -139,17 +139,20 @@
             <div class="col-3 my-4-4">
                 <div class="text-center">
                     {% if user.is_authenticated %}
-                        <img id="avatar" src="/media/{{ user.avatar }}" alt="avatar"
-                             style="max-width:100%; border-radius: 250px; width:230px;">
-                        <br>
-                        <br>
+                        {% if user.avatar %}
+                            <img id="avatar_id" src="/media/{{ user.avatar }}" alt="avatar"
+                                 style="max-width:100%; border-radius: 250px; width:230px;">
+                        {% else %}
+                            <img id="avatar_id" src="{% static 'img/tuijian.png' %}" alt="default-avatar"
+                                 style="max-width:100%; border-radius: 300px; width:230px;">
+                        {% endif %}
+                        <br><br>
                         <h4 style="font-size: 20px;">{{ user.username }}</h4>
                         <p style="font-size: 16px;">{{ user.user_desc }}</p>
                     {% else %}
-                        <img id="avatar" src="{% static 'img/tuijian.png' %}" alt="default-avatar"
+                        <img id="avatar_id" src="{% static 'img/tuijian.png' %}" alt="default-avatar"
                              style="max-width:100%; border-radius: 300px; width:230px;">
-                        <br>
-                        <br>
+                        <br><br>
                         <h4 style="font-size: 20px;">北木楠</h4>
                         <p style="font-size: 16px;">人要一步步去走，事要一件件去做</p>
                     {% endif %}
