修改输入框提醒内容、页面展示数量

--- a/Centerlessblog/templates/forget_password.html
+++ b/Centerlessblog/templates/forget_password.html
@@ -13,6 +13,33 @@
    <!-- 引入vuejs -->
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
+    <style>
+        html, body {
+            background-image: url('/static/img/tuijian.png');
+            background-size: cover;
+            background-position: center center;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        #app {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        #content {
+            flex-grow: 1;
+        }
+
+        #footer {
+            background-color: #343a40;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <div id="app">
@@ -38,7 +65,7 @@
     </div>
 </nav>
 <!--content-->
-<div class="container" style="height: 600px;margin-top: 20px">
+<div  id ="content" class="container" style="height: 600px;margin-top: 20px">
     <div class="row" >
         <div class="col-12">
             <div class="col-6">
@@ -46,32 +73,35 @@
                     {% csrf_token %}
                     <!--手机号-->
                     <div class="form-group">
-                        <label >账号: </label>
+                        <label >账号:  <span style="color: red">*</span></label>
                         <div class="col-lg-6">
                             <input type="text" name="mobile" placeholder="请输入手机号" autofocus="autofocus" required
                                    id="id_login" class="form-control" v-model="mobile"/>
+                                <small style="color: #F5F5DC;">请输入11位手机号码</small>
                         </div>
                         <small class="form-text text-muted ml-1" v-show="mobile_error" >[[mobile_error_message]]</small>
                     </div>
                     <!--密码-->
                     <div class="form-group">
-                        <label >新密码:</label>
+                        <label >新密码: <span style="color: red">*</span></label>
                         <div class="col-lg-6">
                             <input type="password" name="password" placeholder="请输入新密码" required  class="form-control" v-model="password" @blur="check_password"/>
+                            <small style="color: #F5F5DC;">请输入8-20位账号密码</small>
                         </div>
                         <small class="form-text text-muted ml-1" v-show="password_error" >[[password_error_message]]</small>
                     </div>
                     <!--确认密码-->
                     <div class="form-group">
-                        <label >确认密码:</label>
+                        <label >确认密码: <span style="color: red">*</span></label>
                         <div class="col-lg-6">
                             <input type="password" name="password2" placeholder="请输入确认密码" required  class="form-control" v-model="password2" @blur="check_password2"/>
+                            <small style="color: #F5F5DC;">请再次输入8-20位账号密码</small>
                         </div>
                         <small class="form-text text-muted ml-1" v-show="password2_error" >[[password2_error_message]]</small>
                     </div>
                     <!--图片验证码-->
                     <div class="form-group">
-                        <label >图片验证码:</label>
+                        <label >图片验证码: <span style="color: red">*</span></label>
                         <div class="row" style="margin-right:5px;margin-left:0px">
                             <div class="col-lg-6">
                                 <input type="text" name="imgage_code" placeholder="请输入图片验证码" required  class="form-control" v-model="image_code" @blur="check_image_code"/>
@@ -82,7 +112,7 @@
                     </div>
                     <!--短信验证码-->
                     <div class="form-group">
-                        <label >短信验证码:</label>
+                        <label >短信验证码: <span style="color: red">*</span></label>
                         <div class="row" style="margin-right:5px;margin-left:0px">
                             <div class="col-lg-6">
                                 <input type="text" name="sms_code" placeholder="请输入短信验证码" required  class="form-control" v-model="sms_code" @blur="check_sms_code"/>
