--- a/Centerlessblog/templates/index.html
+++ b/Centerlessblog/templates/index.html
@@ -132,7 +132,7 @@
                             </h4>
                             <!-- 摘要 -->
                             <div>
-                                <p style="color: gray;">
+                                <p style="color: #F5F5DC;">
                                     {{ article.sumary }}
                                 </p>
                             </div>
