--- a/Centerlessblog/templates/write_blog.html
+++ b/Centerlessblog/templates/write_blog.html
@@ -92,7 +92,7 @@
                     {% csrf_token %}
                     <!-- 文章标题图 -->
                     <div class="form-group">
-                        <label for="avatar">标题图</label>
+                        <label for="avatar">标题图 <span style="color: red">*</span></label>
                         <input type="file" class="form-control-file" name="avatar" id="avatar"
                                onchange="displayImage()">
                     </div>
@@ -103,13 +103,13 @@
                     <!-- 文章标题 -->
                     <div class="form-group">
                         <!-- 标签 -->
-                        <label for="title">文章标题</label>
+                        <label for="title">文章标题 <span style="color: red">*</span></label>
                         <input type="text" class="form-control" id="title" name="title" required>
                     </div>
 
                     <!-- 文章栏目 -->
                     <div class="form-group">
-                        <label for="category">栏目</label>
+                        <label for="category">栏目 <span style="color: red">*</span></label>
                         <select class="form-control col-3" id="category" name="category" required>
                             <option value="none">请选择分类...</option>
                             {% for category in categories %}
@@ -121,20 +121,20 @@
                 <!-- 文章标签 -->
                 <div class="form-group">
                     <!-- 标签 -->
-                    <label for="tags">标签</label>
+                    <label for="tags">标签 <span style="color: red">*</span></label>
                     <!-- 文本框 -->
                     <input type="text" class="form-control col-3" id="tags" name="tags" >
                 </div>
                 <!-- 文章摘要 -->
                 <div class="form-group">
                     <!-- 标签 -->
-                    <label for="sumary">文章摘要</label>
+                    <label for="sumary">文章摘要 <span style="color: red">*</span></label>
                     <!-- 文本框 -->
                     <input type="text" class="form-control" id="sumary" name="sumary">
                 </div>
                 <!-- 文章正文 -->
                 <div class="form-group">
-                    <label for="body">文章正文</label>
+                    <label for="body">文章正文 <span style="color: red">*</span></label>
                     <!-- 文本区域 -->
                     <!--<textarea type="text" class="form-control" id="body" name="body" rows="12"></textarea>-->
                     <textarea cols="40" id="id_body" name="content" rows="10" required data-processed="0" :data-config="data_config" data-external-plugin-resources="[]" data-id="id_body" data-type="ckeditortype">
