--- a/Centerlessblog/templates/write_blog.html
+++ b/Centerlessblog/templates/write_blog.html
@@ -173,8 +173,8 @@
             reader.onload = function (e) {
                 var image = document.createElement('img');
                 image.src = e.target.result;
-                image.style.width = '210px';
-                image.style.height = '150px';
+                image.style.width = '10%';
+                image.style.height = '10%';
                 container.innerHTML = '';
                 container.appendChild(image);
             }
