优化最热文章展示

--- a/Centerlessblog/templates/index.html
+++ b/Centerlessblog/templates/index.html
@@ -45,6 +45,14 @@
         .container-wrapper {
             flex-grow: 1;
         }
+        {# 最新推荐滑动效果#}
+        .sidebar__item {
+            transition: transform 0.2s;
+        }
+
+        .sidebar__item:hover {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 
